00_base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: java-app
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
