00_base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: my-route
spec:
  to:
    kind: Service
    name: my-service
    weight: 100
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
